--- a/build.gradle
+++ b/build.gradle
@@ -22,21 +22,24 @@ buildscript {
 
 repositories {
         
-     maven { url "https://repo.spring.io/libs-milestone" }
-     maven { url "https://repo.spring.io/libs-snapshot" }
+     maven { url "https://repo.spring.io/libs-release" }
      maven { url "http://repo.maven.apache.org/maven2" }
 }
 
 dependencies {
     compile group: 'org.reactivestreams', name: 'reactive-streams', version:'1.0.1'
+
     compile group: 'io.projectreactor', name: 'reactor-core', version:'3.1.0.RELEASE'
     compile group: 'io.projectreactor.ipc', name: 'reactor-netty', version:'0.7.0.RELEASE'
+
     compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version:'8.5.4'
+
     compile group: 'org.springframework', name: 'spring-context', version:'5.0.0.RELEASE'
     compile group: 'org.springframework', name: 'spring-webflux', version:'5.0.0.RELEASE'
+
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.9.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version:'2.9.1'
-    compile group: 'org.springframework.data', name: 'spring-data-couchbase', version:'2.0.0.RELEASE'
+
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'org.springframework', name: 'spring-test', version:'5.0.0.RELEASE'
 }
